# ExecLint

./: .gitignore  README.md  httpx.py  pydantic.py  pyproject.toml  typer.py
eval/: dataset_README.md  dataset_v2.jsonl
eval/results/: v2_run_20260425.jsonl  v2_summary.md
execlint/: __init__.py  cli.py  config.py  models.py  orchestrator.py
execlint/analyzers/: execution_path.py  hf_status.py  issue_miner.py  repo_discovery.py  repo_triage.py  verdict.py
execlint/clients/: arxiv_client.py  github_client.py  hf_client.py
execlint/utils/: ranking.py  text.py
scripts/: build_eval_dataset_v2.py  build_v2_summary.py  run_eval.py  run_eval_v2.py  verify_eval.py
tests/: test_arxiv_client.py  test_cli.py  test_execution_path.py  test_gap_derivation.py  test_github_client.py  test_issue_miner.py  test_orchestrator.py  test_repo_discovery.py  test_repo_triage.py  test_verdict.py
tests/data/: paper_repo_eval.jsonl  paper_repo_eval_50.jsonl
tests/fixtures/verdict/: clear_caution.json  clear_go.json  clear_no_go.json  missing_weights_downgrade.json  weak_repo_usable_fix_path.json
