[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "execlint"
version = "0.1.0"
description = "Minimal CLI to audit execution readiness for arXiv papers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "httpx>=0.27",
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
execlint = "execlint.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["execlint*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
